Case 35827: IE Edge fix to make sure the card content does not cut off and aligns correctly.

--- a/web/themes/custom/hm-public-theme/static/sass/views/_biographies.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/views/_biographies.scss
@@ -235,6 +235,7 @@
       flex: 2;
       padding: em(10);
       text-align: center;
+      width: 100%;
       z-index: 2;
 
 
